# MacroModels

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  run-cd.sh  run-expectations.sh  run-gdp-nowcast-bridge.sh  run-gdp-nowcast-bvar.sh  run-gdp-nowcast-components.sh  run-gdp-nowcast-dfm.sh  run-gdp-nowcast.sh  run-nairu-stage2.sh  run-nairu-stage3.sh  run-nairu.sh  run-productivity.sh  run-rstar-hlw.sh  run-rstar.sh  uv-upgrade.sh
input_data/: PIE_RBAQ.CSV
output/expectations/: expectations_hdi.csv  expectations_hdi.parquet
src/: __init__.py
src/analysis/: __init__.py  diagnostics.py  extraction.py  inflation_decomposition.py  observations_plot.py  plot_capital_deepening.py  plot_nairu_output.py  plot_nairu_rates.py  plot_nairu_unemployment.py  plot_phillips_curves.py  plot_posterior_timeseries.py  plot_posteriors_bar.py  plot_posteriors_kde.py  plot_productivity.py  plotting.py  rate_conversion.py  residual_autocorrelation.py  timeseries.py
src/data/: DATA_POLICY.md  __init__.py  abs_loader.py  awe.py  balance_of_payments.py  bonds.py  building_approvals.py  business_indicators.py  capex.py  capital.py  capital_share.py  cash_rate.py  commodity_prices.py  construction.py  dataseries.py  debt_servicing.py  dfd_deflator.py  energy.py  expectations.py  expectations_model.py  expectations_rba.py  foreign_demand.py  gdp.py  goods_trade.py  gov_finance.py  gov_spending.py  gscpi.py  henderson.py  hourly_coe.py  house_prices.py  household.py  household_spending.py  import_prices.py  inflation.py  labour_force.py  mfp.py  net_exports.py  observations.py  oil.py  productivity.py  (+10 more)
src/equations/: __init__.py  employment.py  exchange_rate.py  import_price.py  is_curve.py  net_exports.py  okun.py  participation.py  phillips.py  phillips_original.py  production.py  state_space.py
src/models/: __init__.py  base.py  cobb_douglas.py  nairu_output_gap.py  nairu_output_gap_stage1.py  nairu_output_gap_stage2.py
src/models/cobb_douglas/: model.py
src/models/common/: __init__.py  diagnostics.py  extraction.py  nowcast_charts.py  nowcast_core.py  nowcast_diagnostics.py  timeseries.py
src/models/dsge/: DSGE_Mathematics_Explained.md  MODELS_EXPLAINED.md  WORKING_NOTES.md  data_loader.py  estimation.py  hlw_estimation.py  hlw_model.py  hlw_nairu_estimation.py  hlw_nairu_model.py  hlw_nairu_phillips_estimation.py  hlw_nairu_phillips_model.py  kalman.py  nairu_phillips_estimation.py  nairu_phillips_model.py  nk_model.py  plot_hlw_nairu_phillips.py  plot_nairu.py  plot_nairu_phillips.py  plot_output_gap.py  plot_rstar.py  regime_switching.py  shared.py  solver.py
src/models/expectations/: MODEL_EXPLAINED.md  MODEL_NOTES.md  SESSION_NOTES.md  common.py  model.py  stage1.py  stage2.py
src/models/gdp_nowcast/: MODEL_NOTES.md  backtest.py  model.py
src/utilities/: rate_conversion.py
(+124 files in other folders)
